@@ -1,4 +1,8 @@
 
+So dost thou too, and therein dignified.    // Wed Aug 23 2023 07:28:49
+	scripts/index.ts
+
+
 As 'twixt a miser and his wealth is found;    // Wed Aug 23 2023 07:21:57
 	scripts/index.ts
 
